syntax = "proto3";

option go_package = "v1";
option java_package = "stackrox.generated";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/v1/common.proto";

package v1;

enum ImageIntegrationCategory {
    REGISTRY = 0;
    SCANNER  = 1;
}

message DockerConfig {
    string endpoint = 1;
    string username = 2;
    string password = 3;
    bool insecure   = 4;
}

message DTRConfig {
    string username = 1;
    string password = 2;
    string endpoint = 3;
    bool insecure   = 4;
}

message ClairifyConfig {
    string endpoint              = 1;
    message Registry {
        string image_repo = 1;
        string url        = 2;
        string username   = 3;
        string password   = 4;
        bool insecure     = 5;
    }
    Registry registry             = 2;
}

message QuayConfig {
    string endpoint   = 1;
    string oauthToken = 2;
}

message ImageIntegration {
    string id                                    = 1;
    string name                                  = 2;
    string type                                  = 3;
    map<string, string> config                   = 4;
    // If a list of clusters is provided, the integration will only be accessed from the specified clusters' sensors.
    repeated string clusters                     = 5;
    repeated ImageIntegrationCategory categories = 6;
    oneof IntegrationConfig {
        DTRConfig      dtr      = 7;
        ClairifyConfig clairify = 8;
        DockerConfig   docker   = 9;
        QuayConfig     quay     = 10;
    }
}

message GetImageIntegrationsRequest {
    string name    = 1;
    string cluster = 2;
}

message GetImageIntegrationsResponse {
    repeated ImageIntegration integrations = 1;
}

service ImageIntegrationService {

    rpc GetImageIntegration(ResourceByID) returns (ImageIntegration) {
        option (google.api.http) = {
            get: "/v1/imageintegrations/{id}"
        };
    }

    rpc GetImageIntegrations(GetImageIntegrationsRequest) returns (GetImageIntegrationsResponse) {
        option (google.api.http) = {
            get: "/v1/imageintegrations"
        };
    }

    rpc PostImageIntegration(ImageIntegration) returns (ImageIntegration) {
        option (google.api.http) = {
            post: "/v1/imageintegrations"
            body: "*"
        };
    }

    rpc PutImageIntegration(ImageIntegration) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/v1/imageintegrations/{id}"
            body: "*"
        };
    }

    rpc TestImageIntegration(ImageIntegration) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/v1/imageintegrations/test"
            body: "*"
        };
    }

    rpc DeleteImageIntegration(ResourceByID) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/v1/imageintegrations/{id}"
        };
    }

}
